# Generated with zope.meta (https://zopemeta.readthedocs.io/) from:
# https://github.com/zopefoundation/meta/tree/master/src/zope/meta/pure-python
[build-system]
requires = [
    "setuptools >= 78.1.1,< 81",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "grokcore.catalog"
version = "5.1.dev0"
description = "Grok-like configuration for catalog and indexes"
license = "ZPL-2.1"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: Zope :: 3",
]
dynamic = ["readme"]
requires-python = ">=3.10"
authors = [
    {name = "Grok Team",email = "zope-dev@zope.dev"},
]
maintainers = [
    {name = "Plone Foundation and contributors",email = "zope-dev@zope.dev"},
]
dependencies = [
    "grokcore.component >= 2.5",
    "grokcore.site >= 1.7",
    "martian >= 0.13",
    "zc.catalog",
    "zope.annotation",
    "zope.catalog",
    "zope.component",
    "zope.container",
    "zope.event",
    "zope.exceptions",
    "zope.interface",
    "zope.intid",
    "zope.lifecycleevent",
    "zope.keyreference",
    "zope.site",
]

[project.optional-dependencies]
test = [
    "grokcore.content",
    "zope.app.appsetup",
    "zope.component",
    "zope.configuration",
    "zope.location",
    "zope.testing",
    "zope.app.wsgi",
]

[project.urls]
Source = "https://github.com/zopefoundation/grokcore.catalog"
Issues = "https://github.com/zopefoundation/grokcore.catalog/issues"
Changelog = "https://raw.githubusercontent.com/zopefoundation/grokcore.catalog/master/CHANGES.rst"

[tool.coverage.run]
branch = true
source = ["grokcore.catalog"]

[tool.coverage.report]
fail_under = 92
precision = 2
ignore_errors = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "except ImportError:",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "self.fail",
    "raise AssertionError",
    "raise unittest.Skip",
]

[tool.coverage.html]
directory = "parts/htmlcov"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "CHANGES.rst"]}

